--- a/PayRoll Employee/payroll.css
+++ b/PayRoll Employee/payroll.css
@@ -64,3 +64,22 @@ div>span{
     height: 5.8vh;
     border-radius: 5px;
 }
+
+/* Profile images styling */
+
+.profile-radio-content{
+    margin-top: 2em;
+    display: flex;
+    flex-direction: row;
+}
+.profile-radio-content>label{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* padding: 0 5px; */
+}
+.profile{
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 22px;
+}
