--- a/PayRoll Employee/home.css
+++ b/PayRoll Employee/home.css
@@ -10,14 +10,22 @@ html body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 0px solid green;
     width: 10%;
 }
 .addUser{
-    width: 9%;
+    width: 18%;
+    margin-left: 1px;
+    float: right;
 }
+
 .icon{
-    width: 109%;
+    width: 60%;
+}
+.main-content{
+    float: right;
+    display: flex;
+    flex-direction: row;
+    padding: 25px 10px 0 0;
 }
 
 .logo-content-img {
@@ -34,15 +42,9 @@ html body {
 .emp-payroll {
     color: #42515f;
 }
-
-.header-content {
+.header{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    margin: 0 auto;
-    padding: 25px;
 }
 
 .heading {
@@ -63,15 +65,14 @@ html body {
 }
 
 .add-button {
+    float: left;
+    width: 6.5em;
     font-family: 'Roboto', sans-serif !important;
     color: #ffffff;
-    letter-spacing: 0px;
-    opacity: 1;
-    background: #82a70c 0% 0% no-repeat padding-box;
-    border: none;
+    opacity: 5;
+    background: #0ca718cc;
     border-radius: 5px;
-    padding: 5px 18px;
-    outline: none;
+    padding: 5px 9px;
     cursor: pointer;
     text-decoration: none;
 }
